logs/nonsequitur.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nonsequitur'...
Compiling './lib/python3.5/site-packages/nonsequitur/__init__.py'...
***   File "./lib/python3.5/site-packages/nonsequitur/__init__.py", line 51
    print grammar.flatten("#origin#")
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nonsequitur-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycorpora'...
Listing './lib/python3.5/site-packages/pycorpora/data'...
Listing './lib/python3.5/site-packages/pycorpora/data/animals'...
Listing './lib/python3.5/site-packages/pycorpora/data/archetypes'...
Listing './lib/python3.5/site-packages/pycorpora/data/architecture'...
Listing './lib/python3.5/site-packages/pycorpora/data/art'...
Listing './lib/python3.5/site-packages/pycorpora/data/colors'...
Listing './lib/python3.5/site-packages/pycorpora/data/corporations'...
Listing './lib/python3.5/site-packages/pycorpora/data/divination'...
Listing './lib/python3.5/site-packages/pycorpora/data/film-tv'...
Listing './lib/python3.5/site-packages/pycorpora/data/foods'...
Listing './lib/python3.5/site-packages/pycorpora/data/games'...
Listing './lib/python3.5/site-packages/pycorpora/data/geography'...
Listing './lib/python3.5/site-packages/pycorpora/data/governments'...
Listing './lib/python3.5/site-packages/pycorpora/data/humans'...
Listing './lib/python3.5/site-packages/pycorpora/data/instructions'...
Listing './lib/python3.5/site-packages/pycorpora/data/materials'...
Listing './lib/python3.5/site-packages/pycorpora/data/mathematics'...
Listing './lib/python3.5/site-packages/pycorpora/data/medicine'...
Listing './lib/python3.5/site-packages/pycorpora/data/music'...
Listing './lib/python3.5/site-packages/pycorpora/data/mythology'...
Listing './lib/python3.5/site-packages/pycorpora/data/objects'...
Listing './lib/python3.5/site-packages/pycorpora/data/plants'...
Listing './lib/python3.5/site-packages/pycorpora/data/pycorpora_test'...
Listing './lib/python3.5/site-packages/pycorpora/data/pycorpora_test/subdir'...
Listing './lib/python3.5/site-packages/pycorpora/data/religion'...
Listing './lib/python3.5/site-packages/pycorpora/data/science'...
Listing './lib/python3.5/site-packages/pycorpora/data/societies_and_groups'...
Listing './lib/python3.5/site-packages/pycorpora/data/societies_and_groups/designated_terrorist_groups'...
Listing './lib/python3.5/site-packages/pycorpora/data/societies_and_groups/fraternities'...
Listing './lib/python3.5/site-packages/pycorpora/data/sports'...
Listing './lib/python3.5/site-packages/pycorpora/data/sports/football'...
Listing './lib/python3.5/site-packages/pycorpora/data/technology'...
Listing './lib/python3.5/site-packages/pycorpora/data/transportation'...
Listing './lib/python3.5/site-packages/pycorpora/data/travel'...
Listing './lib/python3.5/site-packages/pycorpora/data/words'...
Listing './lib/python3.5/site-packages/pycorpora/data/words/emoji'...
Listing './lib/python3.5/site-packages/pycorpora/data/words/literature'...
Listing './lib/python3.5/site-packages/pycorpora/data/words/stopwords'...
Listing './lib/python3.5/site-packages/pycorpora/data/words/word_clues'...
Listing './lib/python3.5/site-packages/pycorpora-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tracery'...
Listing './lib/python3.5/site-packages/tracery-0.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
